--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     'targetCompatibility': JavaVersion.VERSION_1_7,
     'okhttp': '4.1.0',
     'okio': '2.1.0',
+    'kotlin': '1.3.50'
   ]
 
   ext.deps = [
@@ -25,7 +26,8 @@ buildscript {
     truth: 'com.google.truth:truth:0.42',
     robolectric: 'org.robolectric:robolectric:4.0.1',
     mockito: 'org.mockito:mockito-core:2.23.0',
-    nullaway: 'com.uber.nullaway:nullaway:0.6.0'
+    nullaway: 'com.uber.nullaway:nullaway:0.6.0',
+    kotlin: "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
   ]
 
   ext.isCi = "true" == System.getenv('CI')
@@ -37,6 +39,7 @@ buildscript {
 
   dependencies {
     classpath deps.androidPlugin
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.16'
   }
