--- a/picasso-sample/build.gradle
+++ b/picasso-sample/build.gradle
@@ -29,6 +29,7 @@ dependencies {
   implementation deps.androidxCore
   implementation deps.androidxFragment
   implementation project(':picasso')
+  implementation project(':picasso-stats')
 
   annotationProcessor deps.nullaway
 }
